<resources>
    <string name="app_name">MovieQuotes</string>
    <string name="action_settings">Settings</string>
    <string name="decrease_font_size">Decrease font size</string>
    <string name="increase_font_size">Increase font size</string>
    <string name="quote">Quote</string>
    <string name="movie">Movie</string>
    <string name="clear_quote">Clear quote</string>
    <string name="clear_condensed">Clear</string>
    <string name="confirm_delete_title">Confirm delete</string>
    <string name="confirm_delete_message">Are you sure you want to delete this quote?</string>
    <string name="dialog_which_settings_title">Which settings do you want?</string>
    <string-array name="settings_types">
        <item>Sound</item>
        <item>Search</item>
        <item>General</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_edit_dialog_hint_quote">Enter quote</string>
    <string name="add_edit_dialog_hint_movie">Enter movie</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="icon">Icon</string>
</resources>
